--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "aws s3 sync build/ s3://duckface-web-client --delete",
+    "postdeploy": "aws cloudfront create-invalidation --distribution-id E28FX6QFMU4SU0 --paths '/*'",
     "eject": "react-scripts eject"
   }
 }
